syntax = "proto3";

package calculator;

message OperationRequest {
	int32 number1 = 1;
	int32 number2 = 2;
}

message OperationResponse {
	int32 result = 1;
}

service CalculatorService {
	rpc Sum (OperationRequest) returns (OperationResponse) {};
}